<resources>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed out</string>


    <string name="app_name">Up Board</string>
    <string name="company_name">Evans and Chambers</string>
    <string name="app_name_without_company">Up Board</string>

    <!-- need this to sign in to Google Play Services -->
    <string name="google_app_id">714175265402-74rjbgq8g1iq34tonkeph2olm63u1u2u.apps.googleusercontent.com</string>


    <!-- Login -->
    <string name="login_with_google">Login with Google</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_login_quit">Quit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_bot_board_login2">BotBoardLogin2</string>

    <!-- strings for main screen deck subcontent-->
    <string name="main_screen_decks_titlebar_title">Your Decks</string>
    <string name="main_screen_create_decks_text">Create</string>

    <!-- strings for main screen slides subcontent-->
    <string name="main_screen_slides_titlebar_title">Your Slides</string>
    <string name="main_screen_titlebar_title_slides_deck_name">A Deck Name</string>
    <string name="main_screen_play_slides_text">Play</string>
    <string name="main_screen_titlebar_title_slides_list">Slide List</string>
    <string name="main_screen_create_slides_text">Create</string>

    <!-- strings for main screen slide detail subcontent-->
    <string name="main_screen_delete_slide_text">Delete</string>
    <string name="main_screen_slide_detail_slide_name_text">A Slide Name</string>
    <string name="main_screen_slide_detail_slide_edit_text">Edit Slide</string>
    <string name="main_screen_slide_detail_slide_type_text">Type:</string>
    <string name="main_screen_slide_detail_slide_title_text">Title:</string>
    <string name="main_screen_slide_detail_slide_duration_text">Duration:</string>
    <string name="main_screen_slide_detail_slide_transistion_in_text">Transistion In:</string>
    <string name="main_screen_slide_detail_slide_transistion_out_text">Transistion Out:</string>
    <string name="main_screen_slide_detail_slide_transistion_duration_text">Transistion Duration:</string>
    <string name="main_screen_slide_detail_slide_active_text">Active:</string>
    <string name="main_screen_slide_detail_slide_logo_text">Logo:</string>
    <string name="main_screen_slide_detail_slide_show_footer_text">Footer:</string>
    <string name="main_screen_slide_detail_slide_content_text">Content:</string>

    <!-- strings for create deck dialog-->
    <string name="deck_create_dialog_active_text">Active:</string>

    <string-array name="slide_type_array">
        <item>logo</item>
        <item>picture</item>
        <item>sms</item>
        <item>bioPanels</item>
        <item>weather</item>
        <item>staticVideoOverlay</item>
        <item>dropIn</item>
        <item>dashboard</item>
    </string-array>

    <string-array name="slide_transistion_in_array">
        <item>fade</item>
        <item>slide</item>
    </string-array>

    <string-array name="slide_transistion_out_array">
        <item>fade</item>
        <item>slide</item>
    </string-array>

    <string-array name="slide_active_array">
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string-array name="slide_status_array">
        <item>running</item>
        <item>stopped</item>
    </string-array>

    <string-array name="slide_logo_array">
        <item>settings</item>
        <item>none</item>
    </string-array>

    <string-array name="slide_show_footer_array">
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string-array name="slide_context_array">
        <item>a placeholder</item>
    </string-array>

    <!-- strings for main screen slide detail content subcontent-->
    <string name="main_screen_slide_content_slide_text">Slide Content</string>
    <string name="slide_detail_content_default_message_text">Default:</string>
    <string name="slide_detail_content_message_text">Message:</string>
    <string name="slide_detail_content_prefix_text">Prefix:</string>
    <string name="slide_detail_content_caption_text">Caption:</string>
    <string name="slide_detail_content_event_text">Event:</string>
    <string name="slide_detail_content_bio_text">Bio:</string>
    <string name="slide_detail_content_name_text">Name:</string>
    <string name="slide_detail_content_imageurl_text">Image URL:</string>
    <string name="slide_detail_content_videourl_text">Video URL:</string>
    <string name="slide_detail_content_imageurlcontent_text">Image URL content:</string>
    <string name="slide_detail_content_imageurlcover_text">Image URL cover:</string>
    <string name="slide_detail_content_timeout_text">Timeout:</string>
    <string name="slide_detail_content_zip_text">Zip:</string>
    <string name="slide_detail_content_hireyear_text">Hire year:</string>
    <string name="slide_detail_content_from_text">From (tel):</string>
    <string name="slide_detail_content_overlaycolor_text">Overlay color:</string>
    <string name="slide_detail_content_overlay_text">Overlay:</string>
    <string name="slide_detail_content_status_text">Status:</string>
    <string name="slide_detail_content_timestamp_text">Time stamp:</string>
    <string name="slide_detail_content_todayingestrate_text">Ingest rate:</string>
    <string name="slide_detail_content_todayingestcount_text">Ingest count:</string>
    <string name="slide_detail_content_todayerrorcount_text">Error count:</string>
    <string name="slide_detail_content_yesterdayingestcount_text">Ingest count:</string>
    <string name="slide_detail_content_yesterdayerrorcount_text">Error count:</string>
    <string name="slide_detail_content_uptimedownminutes_text">Down minutes:</string>
    <string name="slide_detail_content_uptimetotalminutes_text">Total minutes:</string>
    <string name="slide_detail_content_layout_text">Layout:</string>
    <string name="slide_detail_content_snapshot_text">Snapshot:</string>
    <string name="main_screen_deck_edit_titlebar_title">Edit Deck</string>

</resources>
