<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="40dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/mover_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_without_company"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>
<!--
    <com.google.android.gms.common.SignInButton
        android:layout_marginTop="200dp"
        android:id="@+id/login_with_google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_with_google"
        android:layout_weight="0.53" />
-->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_with_google"
        android:layout_weight="0"
        android:layout_marginTop="20dp"
        style="@android:style/TextAppearance.Material" />

</LinearLayout>