<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:gravity="fill"
    android:background="#d5d5d5">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:src="@drawable/ec_logo"
        android:maxHeight="196dp"
        android:maxWidth="196dp"
        android:background="#eee9e9"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        style="@style/AppTheme.Material.ImageButton"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_without_company"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:layout_weight="1" />
<!--
    <com.google.android.gms.common.SignInButton
        android:layout_marginTop="200dp"
        android:id="@+id/login_with_google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_with_google"
        android:layout_weight="0.53" />
-->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_with_google"
        android:layout_marginTop="20dp"
        style="@android:style/TextAppearance.Material"
        android:elevation="10dp"
        android:layout_marginBottom="40dp" />

</LinearLayout>