<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/botboard_main_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_light"
        android:layout_weight="1"
        android:id="@+id/mainScreenSlidesSubcontentContainer">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_gray_400"
            android:layout_weight="0"
            android:id="@+id/mainScreenTopBarContainerSlidesPlay"
            android:paddingLeft="10dp"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainScreenTitleTextViewSlidesPlayDeckName"
                android:text="@string/main_screen_titlebar_title_slides_deck_name"
                android:layout_weight="0"
                android:gravity="left"
                android:inputType="none"
                android:textColor="@color/abc_primary_text_material_dark"
                android:singleLine="false"
                android:layout_gravity="center_vertical|left"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainScreenPlaySlideContainer"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainScreenPlaySlideTextEdit"
                    android:text="@string/main_screen_play_slides_text"
                    android:visibility="visible"
                    android:inputType="none"
                    android:textColor="@color/abc_primary_text_material_light"
                    android:elegantTextHeight="false"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageButton
                    android:layout_width="@dimen/abc_action_button_min_width_material"
                    android:layout_height="@dimen/abc_action_button_min_height_material"
                    android:id="@+id/mainScreenPlaySlideButton"
                    android:src="@drawable/ic_play_arrow_black"
                    android:scaleType="fitCenter"
                    android:elevation="5dp"
                    android:backgroundTint="#ffffff"
                    android:layout_marginLeft="5dp"
                    style="@style/AppTheme.Material.ImageButton"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_gray_400"
            android:layout_weight="0"
            android:id="@+id/mainScreenTopBarContainerCreateSlides"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:showDividers="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainScreenTitleTextViewSlidesList"
                android:text="@string/main_screen_titlebar_title_slides_list"
                android:layout_weight="0"
                android:gravity="left"
                android:inputType="none"
                android:textColor="@color/abc_primary_text_material_dark"
                android:singleLine="false"
                android:layout_gravity="center_vertical|left"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainScreenCreateDeckContainer"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainScreenCreateSlideTextEdit"
                    android:text="@string/main_screen_create_slides_text"
                    android:visibility="visible"
                    android:inputType="none"
                    android:textColor="@color/abc_primary_text_material_light"
                    android:elegantTextHeight="false"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <ImageButton
                    android:layout_width="@dimen/abc_action_button_min_width_material"
                    android:layout_height="@dimen/abc_action_button_min_height_material"
                    android:id="@+id/mainScreenCreateSlideButton"
                    android:src="@drawable/ic_library_add_black"
                    android:scaleType="fitCenter"
                    android:elevation="5dp"
                    android:backgroundTint="#ffffff"
                    android:layout_marginLeft="5dp"
                    style="@style/AppTheme.Material.ImageButton"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainScreenSlidesListView"
            android:layout_weight="1"
            android:requiresFadingEdge="vertical"
            android:saveEnabled="true"
            android:scrollIndicators="bottom|top"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarDefaultDelayBeforeFade="250"
            android:scrollbarFadeDuration="500"
            android:scrollbarSize="7dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:isScrollContainer="true"
            tools:listitem="@layout/botboard_slide_list_item_layout"
            android:choiceMode="singleChoice"
            android:numColumns="auto_fit"
            android:stretchMode="spacingWidthUniform"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:columnWidth="@dimen/desk_table_item_image_container_size"
            android:contextClickable="false"
            android:clickable="false"
            android:background="@color/material_grey_300"
            android:layout_marginTop="3dp"
            android:verticalSpacing="5dp"
            android:fastScrollAlwaysVisible="false"
            android:headerDividersEnabled="false"
            android:paddingLeft="3dp"
            android:dividerHeight="0dp"
            android:cacheColorHint="@color/cacheColorHint" />
    </LinearLayout>
</merge>